tests/fixtures/errors/missing-deps/src/index.js
// This fixture has a missing dependency to test error handling
const missing = require('this-package-does-not-exist')

module.exports = { missing }
